--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="history_onclick_name">Show history on touch</string>
     <string name="history_onkeyboard_name">Show history with keyboard</string>
     <string name="history_onkeyboard_desc">Show history when software keyboard is visible</string>
+    <string name="history_onclick_home_name">Toggle between history and widget with home button</string>
     <string name="portrait_title">Force portrait mode</string>
     <string name="lwp_touch">Send touch events to wallpaper</string>
     <string name="lwp_drag">Emulate drag event for wallpaper</string>
